ephy-shell: allow multiple open_uris idles

We should not silently fail a call to ephy_shell_open_uris(), to handle
a race condition where a user clicks on multiple URIs in quick
succession.

https://bugzilla.gnome.org/show_bug.cgi?id=735577